# jogo_embaralha_palavra

./: README.md  frases_motivacao.txt  jogo_embaralha_palavra.py  palavras.txt  pyproject.toml
