[tool.poetry]
name = "embaralha_palavra"
version = "0.1.0"
description = ""
authors = ["jhonathasmoura <jhonathasmoura6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
